Patch submissions and claims with validation errors (#48)